all repositories tested

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,8 @@
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
-#spring.datasource.generateUniqueName=true nowa baza dla kazdego testu
+#spring.datasource.generateUniqueName=true
+#new unique database each new unit test
 spring.jpa.database=H2
 spring.jpa.hibernate.ddl-auto=create-drop
 #todo test app on H2 database
