service tests done

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=
 spring.jpa.database=H2
 spring.jpa.hibernate.ddl-auto=create-drop
 #todo test app on H2 database
+#todo DONE test domain
+#todo DONE test repository
+#todo DONE test service
+#todo test controller
