--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #todo DONE test domain
 #todo DONE test repository
 #todo DONE test service
-#todo test controller
+#todo validator to correct method find all specimens no all specimens of THIS type of book, methods delete rent time when return book
