validator corrected, to class was added new stream wiht filter which check books title

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,8 +6,9 @@ spring.datasource.password=
 #new unique database each new unit test
 spring.jpa.database=H2
 spring.jpa.hibernate.ddl-auto=create-drop
-#todo test app on H2 database
+#todo DONE app on H2 database
 #todo DONE test domain
 #todo DONE test repository
 #todo DONE test service
-#todo validator to correct method find all specimens no all specimens of THIS type of book, methods delete rent time when return book
+#todo DONE validator to correct, method find all specimens no all specimens of THIS type of book,
+#todo methods set rent time on null, when book is returned
